--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
 body {
     background: #FFD545;
+    font-family: "Montserrat", sans-serif;
+
+}
+
+.principal-title {
+    text-align: center;
+    font-size: 40px;
+    margin: 5px;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .warning-img {
@@ -69,17 +79,38 @@ body {
 }
 
 .button-container {
-    margin: 3% 1% 1% 21%;
+    margin: 1% 1% 1% 21%;
     height: 70px;
     width: 20%;
     border-radius: 25px;
     font-size: 30px;
+    color: white;
 }
 
-#encode-button{
+#encode-button {
     border: 4px solid white;
-    background-color: #EC3C0F;
-    
+    background-color: #EC3C0F;    
+}
+
+#decode-button {
+    border: 4px solid black;
+    background-color: white;
+    color: black;
+
+}
+
+footer {
+    background: #F2921D;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
 }
 
 
+.second-title {
+
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+}
